# Verteilte-Systeme-DHBW

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
tests/: test_api_latency.py
verteilte_systeme_dhbw/backend/: README.md  rqlite_test.py
verteilte_systeme_dhbw/backend-mongodb/: README.md  db-verteilte-systeme-mysql.md  lernsystem.service  main.py  start_backend.py
verteilte_systeme_dhbw/backend-mongodb/db-model/: data.json  db-setup.py  db-verteilte-systeme-mysql.md
verteilte_systeme_dhbw/backend-mongodb/mongodb_app/: crud.py  main.py  models.py  question_routes.py  user_routes.py
verteilte_systeme_dhbw/backend-rqlite/: README.md
verteilte_systeme_dhbw/backend-rqlite/db-model/: DB-Model_VerteilteSysteme.mwb  db-setup.py
verteilte_systeme_dhbw/backend-rqlite/sql_app/: schemas.py
verteilte_systeme_dhbw/backend/db-model/: DB-Model_VerteilteSysteme.mwb  DB-Model_VerteilteSysteme.mwb.bak  db-setup.py
verteilte_systeme_dhbw/backend/db-model/sql/: db-verteilteSysteme.sql  (+2 more)
verteilte_systeme_dhbw/backend/sql_app/: crud.py  database.py  main.py  models.py  models_vs.py  schemas.py
verteilte_systeme_dhbw/backend_mongodb/: README.md  start_backend.py
verteilte_systeme_dhbw/backend_mongodb/mongodb_app/: crud.py  main.py  models.py  question_routes.py
verteilte_systeme_dhbw/backend_rqlite/db-model/: db-setup.py
verteilte_systeme_dhbw/backend_rqlite/sql_app/: main.py
verteilte_systeme_dhbw/frontend/: README.md  apiCalls.py  example.py  main.py  menu.py  rqlite_test.py  select_answer.py  user.py
(+3 files in other folders)
